解决管控台报错500的问题